--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="produtos">
       <!-- Produto 1 -->
       <article class="produto">
-        <a href="https://example.com/produto1" target="_blank">
+        <a href="https://www.riotgames.com/pt-br" target="_blank">
           <img src="maxresdefault.jpg" alt="Produto 1">
         </a>
         <h2>Produto 1</h2>
@@ -22,7 +22,7 @@
 
       <!-- Produto 2 -->
       <article class="produto">
-        <a href="https://example.com/produto2" target="_blank">
+        <a href="https://www.riotgames.com/pt-br" target="_blank">
           <img src="maxresdefault.jpg" alt="Produto 2">
         </a>
         <h2>Produto 2</h2>
@@ -30,7 +30,7 @@
 
       <!-- Produto 3 -->
       <article class="produto">
-        <a href="https://example.com/produto3" target="_blank">
+        <a href="https://www.riotgames.com/pt-br" target="_blank">
           <img src="maxresdefault.jpg" alt="Produto 3">
         </a>
         <h2>Produto 3</h2>
@@ -38,7 +38,7 @@
 
       <!-- Produto 4 -->
       <article class="produto">
-        <a href="https://example.com/produto4" target="_blank">
+        <a href="https://www.riotgames.com/pt-br" target="_blank">
           <img src="maxresdefault.jpg" alt="Produto 4">
         </a>
         <h2>Produto 4</h2>
@@ -46,7 +46,7 @@
 
       <!-- Produto 5 -->
       <article class="produto">
-        <a href="https://example.com/produto5" target="_blank">
+        <a href="https://www.riotgames.com/pt-br" target="_blank">
           <img src="maxresdefault.jpg" alt="Produto 5">
         </a>
         <h2>Produto 5</h2>
@@ -54,7 +54,7 @@
 
       <!-- Produto 6 -->
       <article class="produto">
-        <a href="https://example.com/produto6" target="_blank">
+        <a href="https://www.riotgames.com/pt-br" target="_blank">
           <img src="maxresdefault.jpg" alt="Produto 6">
         </a>
         <h2>Produto 6</h2>
